<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/car_icon"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/fee_icon"
        android:title="@string/navigation_dashboard" />

    <item
        android:id="@+id/navigation_coupon"
        android:icon="@drawable/coupon_icon"
        android:title="@string/navigation_coupon" />

    <item
        android:id="@+id/navigation_vip"
        android:icon="@drawable/member_icon"
        android:title="@string/navigation_vip" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map_icon"
        android:title="@string/navigation_map" />

</menu>
