<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/navigation_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/navigation_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_coupon"
        android:name="com.example.myapplication.ui.coupon.CouponFragment"
        android:label="@string/navigation_coupon"
        tools:layout="@layout/fragment_coupon" />

    <fragment
        android:id="@+id/navigation_vip"
        android:name="com.example.myapplication.ui.member.MemberFragment"
        android:label="@string/navigation_vip"
        tools:layout="@layout/fragment_member" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.myapplication.ui.map.MapFragment"
        android:label="@string/navigation_map"
        tools:layout="@layout/fragment_map" />
</navigation>