<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="96dp"
        app:srcCompat="@drawable/logo"
        tools:visibility="visible"/>
    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="144dp"
        tools:ignore="HardcodedText">

        <EditText
            android:id="@+id/index_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:hint="@string/prompt_ph"
            android:inputType="phone"
            android:maxLength="10"
            android:selectAllOnFocus="true"
            android:paddingTop="5dp"
            android:background="@drawable/edittext" />

        <EditText
            android:id="@+id/index_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:password="true"
            android:hint="@string/prompt_pass"
            android:singleLine="true"
            android:imeActionLabel="@string/action_sign_in_short"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:paddingTop="5dp"
            android:background="@drawable/edittext" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:stretchColumns="0,1">
            <TableRow>
                <Button
                    android:id="@+id/anonymous"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_margin="4dp"
                    android:enabled="true"
                    android:gravity="center"
                    android:text="@string/action_any_sign_in"
                    android:background="@drawable/btn_ripple" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_margin="4dp"
                    android:enabled="true"
                    android:gravity="center"
                    android:text="@string/action_sign_in"
                    android:background="@drawable/btn_ripple" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="4dp"
        android:layout_height="165dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

</FrameLayout>