<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edit_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:gravity="center"
            android:padding="4dp"
            android:text="Editcar"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:background="@drawable/edittext"/>

        <TextView
            android:id="@+id/textView_feekind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Feekind"
            android:layout_margin="4dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/txt_membercode"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/textView_membercode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Membercode"
                android:layout_margin="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_dt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_datetime"
                android:layout_margin="4dp"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                android:id="@+id/textView_datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="Datetime"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/txt_paytime"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/textView_paytime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="Paytime"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_lt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/txt_lefttime"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/textView_lefttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="Lefttime"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/txt_membercode_type"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_dis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/txt_memberdis"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_memberdis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/edittext"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/txt_Amount"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/textView_Amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Amount"
                android:layout_margin="4dp"
                android:layout_gravity="right"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:gravity="center">

        <Button
            android:id="@+id/edit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:text="@string/carplate_cancel"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_ripple"/>

        <Button
            android:id="@+id/edit_updata"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:text="@string/carplate_update"
            android:background="@drawable/btn_shape_update"/>

    </LinearLayout>

    </LinearLayout>

</ScrollView>