<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText
            android:id="@+id/visa1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="8dp"
            android:ems="3"
            android:gravity="center"
            android:hint="1111"
            android:inputType="number"
            android:maxLength="4" />

        <EditText
            android:id="@+id/visa2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toRightOf="@id/visa1"
            android:ems="3"
            android:gravity="center"
            android:hint="2222"
            android:inputType="number"
            android:maxLength="4" />

        <EditText
            android:id="@+id/visa3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toRightOf="@id/visa2"
            android:ems="3"
            android:gravity="center"
            android:hint="3333"
            android:inputType="number"
            android:maxLength="4" />

        <EditText
            android:id="@+id/visa4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toRightOf="@id/visa3"
            android:ems="3"
            android:gravity="center"
            android:hint="4444"
            android:inputType="number"
            android:maxLength="4" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/test_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="5"
            android:gravity="center"
            android:text="@string/visa_date"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/visa_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/test_date"
            android:layout_margin="8dp"
            android:ems="2"
            android:gravity="center"
            android:hint="11"
            android:inputType="number"
            android:maxLength="2" />

        <TextView
            android:id="@+id/text_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/visa_month"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/visa_month"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/visa_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_month"
            android:layout_margin="8dp"
            android:ems="3"
            android:gravity="center"
            android:hint="2222"
            android:inputType="number"
            android:maxLength="4" />
        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/visa_year"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/visa_year"
            android:textSize="18dp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/test_visa_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp"
            android:ems="5"
            android:gravity="center"
            android:text="@string/visa_check"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/visa_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toRightOf="@id/test_visa_check"
            android:ems="3"
            android:gravity="center"
            android:hint="000"
            android:inputType="number"
            android:maxLength="3" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/visa_new_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:enabled="false"
            android:text="@string/visa_new"
            android:background="@drawable/btn_ripple"/>

        <Button
            android:id="@+id/visa_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/visa_new_btn"
            android:layout_margin="18dp"
            android:text="@string/visa_cancel"
            android:background="@drawable/btn_ripple"/>

    </RelativeLayout>

</LinearLayout>


